--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Gentoo & 58 & 4679.74 & 36.97\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, colback=white, toprule=.15mm, breakable, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, leftrule=.75mm, coltitle=black, bottomtitle=1mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, titlerule=0mm, left=2mm, arc=.35mm]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, coltitle=black, left=2mm, colbacktitle=quarto-callout-note-color!10!white, leftrule=.75mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, arc=.35mm, bottomtitle=1mm, rightrule=.15mm, opacitybacktitle=0.6, colback=white, toptitle=1mm, breakable, bottomrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, opacityback=0]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -318,25 +318,34 @@ We use standard deviations for \emph{descriptive purposes}
 precisely a sample mean estimates the true population mean. They are
 used for \emph{inferential purposes}, whereby we try to infer from the
 sample mean the range of values in which the true population mean might
-be.
+be. Assuming normally distributed values, it would be very surprising if
+the true population means were more than two standard errors away from
+the sample means.
+
+Standard errors are calculated from the standard deviations (SD) of the
+sample using the formula \$\test{SE}=\frac{\text{SD}}{sqrt{n}} where
+\emph{n} is the sample size. This means that standard errors \emph{do}
+get systematically smaller, the larger the sample. The larger the
+sample, the closer the sample mean is likely to be to the true
+population mean. Who knew?
 
 \textbf{confidence intervals} These are also inferential tools. They
 tell us the range of values within which the true mean might plausibly
 lie, at some level of confidence, usually 95\%.
 
+If you include error bars in a plot you can use any of these three
+errors, depending on the story you want to tell. Whichever, just
+\textbf{must} state in the figure caption which of them you have used.
+Failing to do this can seriously mislead the reader, since they can be
+of very different magnitudes.
+
 \end{tcolorbox}
 
-The errors calculated here are \textbf{standard errors of the mean}.
-They give us an indiciation as to how well the sample means estimate the
-population means. Assuming normally distributed values, it would be very
-surprising if the true population means were more than two of these
-standard errors away from the sample means.
-
-On the flip side, the population means could plausibly lie anyhwere in
-the range that is our sample means plus or minus two of these standard
-errors.
-
-That said:
+The errors calculated here are \textbf{standard errors of the mean}. We
+do this becuase we want to get an idea, from our samples, of how
+plausible it is that the population means differ from each other. These
+population means could plausibly lie anyhwere in the range that is our
+sample means plus or minus two of these standard errors.
 
 \begin{itemize}
 \tightlist
@@ -348,6 +357,12 @@ That said:
 \item
   Do we have evidence to reject the null hypothesis. (Clue: yes we do!)
 \end{itemize}
+
+\section{Plot the data}\label{plot-the-data}
+
+After summarising the data, then ext thing we nearly always do in
+deciding what the data is telling us is to plot the data. We have
+several choices of how to do so and each has its pros and cons.
 
 \bookmarksetup{startatroot}
 
