--- a/visualising_data.qmd
+++ b/visualising_data.qmd
@@ -58,19 +58,25 @@ penguin_summary |>
 **standard deviations**: These tell us about the spread of values in a sample or a population. They do not systematically get bigger or smaller as the sample size increases. The standard deviation of a sample can be used as an estimate of the standard deviation of the population. We use standard deviations for *descriptive purposes*
 
 **standard errors of the mean**
-These are used to indicate how precisely a sample mean estimates the true population mean. They are used for *inferential purposes*, whereby we try to infer from the sample mean the range of values in which the true population mean might be. 
+These are used to indicate how precisely a sample mean estimates the true population mean. They are used for *inferential purposes*, whereby we try to infer from the sample mean the range of values in which the true population mean might be. Assuming normally distributed values, it would be very surprising if the true population means were more than two standard errors away from the sample means.
+
+Standard errors are calculated from the standard deviations (SD) of the sample using the formula $\test{SE}=\frac{\text{SD}}{sqrt{n}} where *n* is the sample size. This means that standard errors *do* get systematically smaller, the larger the sample. The larger the sample, the closer the sample mean is likely to be to the true population mean. Who knew?
 
 **confidence intervals**
-These are also inferential tools. They tell us the range of values within which the true mean might plausibly lie, at some level of confidence, usually 95%.
+These are also inferential tools. They tell us the range of values within which the true mean might plausibly lie, at some level of confidence, usually 95%. 
+
+If you include error bars in a plot you can use any of these three errors, depending on the story you want to tell. Whichever, just **must** state in the figure caption which of them you have used. Failing to do this can seriously mislead the reader, since they can be of very different magnitudes.
 
 :::
 
-The errors calculated here are **standard errors of the mean**. They give us an indiciation as to how well the sample means estimate the population means. Assuming normally distributed values, it would be very surprising if the true population means were more than two of these standard errors away from the sample means.
-
-On the flip side, the population means could plausibly lie anyhwere in the range that is our sample means plus or minus two of these standard errors.
-
-That said:
+The errors calculated here are **standard errors of the mean**. We do this becuase we want to get an idea, from our samples, of how plausible it is that the population means differ from each other.
+These population means could plausibly lie anyhwere in the range that is our sample means plus or minus two of these standard errors.
 
 -   Does it look as though there is evidence form the data for a difference between Adelie and Chinstrop penguins?
 -   What about the Gentoos compared to either of the other two?
 -   Do we have evidence to reject the null hypothesis. (Clue: yes we do!)
+
+## Plot the data
+
+After summarising the data, then ext thing we nearly always do in deciding what the data is telling us is to plot the data. We have several choices of how to do so and each has its pros and cons. 
+
