--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, colframe=quarto-callout-note-color-frame, titlerule=0mm, bottomrule=.15mm, arc=.35mm, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, bottomtitle=1mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, coltitle=black, toprule=.15mm, leftrule=.75mm, left=2mm, colback=white, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, left=2mm, coltitle=black, colback=white, breakable, colframe=quarto-callout-note-color-frame, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, opacitybacktitle=0.6, toprule=.15mm, opacityback=0, arc=.35mm, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, toptitle=1mm, leftrule=.75mm, bottomrule=.15mm, titlerule=0mm]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -323,7 +323,7 @@ the true population means were more than two standard errors away from
 the sample means.
 
 Standard errors are calculated from the standard deviations (SD) of the
-sample using the formula \(\text{SE}=\frac{\text{SD}}{sqrt{n}}\) where
+sample using the formula \(\text{SE}=\frac{\text{SD}}{\sqrt{n}}\) where
 \emph{n} is the sample size. This means that standard errors \emph{do}
 get systematically smaller, the larger the sample. The larger the
 sample, the closer the sample mean is likely to be to the true
