--- a/visualising_data.qmd
+++ b/visualising_data.qmd
@@ -78,7 +78,7 @@ penguin_summary |>
 **standard errors of the mean** These are used to indicate how precisely a sample mean estimates the true population mean. They are used for *inferential purposes*, whereby we try to infer from the sample mean the range of values in which the true population mean might be. Assuming normally distributed values, it would be very surprising if the true population means were more than two standard errors away from the sample means.
 
 Standard errors are calculated from the standard deviations (SD) of the sample using the formula 
-$\text{SE}=\frac{\text{SD}}{sqrt{n}}$ where *n* is the sample size. This means that standard errors *do* get systematically smaller, the larger the sample. The larger the sample, the closer the sample mean is likely to be to the true population mean. Who knew?
+$\text{SE}=\frac{\text{SD}}{\sqrt{n}}$ where *n* is the sample size. This means that standard errors *do* get systematically smaller, the larger the sample. The larger the sample, the closer the sample mean is likely to be to the true population mean. Who knew?
 
 **confidence intervals** These are also inferential tools. They tell us the range of values within which the true mean might plausibly lie, at some level of confidence, usually 95%.
 
