--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, bottomrule=.15mm, arc=.35mm, toptitle=1mm, leftrule=.75mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, breakable, coltitle=black, bottomtitle=1mm, rightrule=.15mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, opacitybacktitle=0.6, toprule=.15mm, left=2mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, breakable, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colbacktitle=quarto-callout-note-color!10!white, bottomrule=.15mm, toptitle=1mm, arc=.35mm, colback=white, opacityback=0, colframe=quarto-callout-note-color-frame, opacitybacktitle=0.6, coltitle=black, bottomtitle=1mm, titlerule=0mm, rightrule=.15mm, toprule=.15mm, left=2mm]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
