--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, breakable, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colbacktitle=quarto-callout-note-color!10!white, bottomrule=.15mm, toptitle=1mm, arc=.35mm, colback=white, opacityback=0, colframe=quarto-callout-note-color-frame, opacitybacktitle=0.6, coltitle=black, bottomtitle=1mm, titlerule=0mm, rightrule=.15mm, toprule=.15mm, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, toptitle=1mm, coltitle=black, bottomtitle=1mm, opacitybacktitle=0.6, opacityback=0, colback=white, bottomrule=.15mm, left=2mm, leftrule=.75mm, toprule=.15mm, breakable, colframe=quarto-callout-note-color-frame, arc=.35mm, titlerule=0mm, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -342,7 +342,7 @@ of very different magnitudes.
 \end{tcolorbox}
 
 The errors calculated here are \textbf{standard errors of the mean}. We
-do this becuase we want to get an idea, from our samples, of how
+use these because we want to get an idea, from our samples, of how
 plausible it is that the population means differ from each other. These
 population means could plausibly lie anyhwere in the range that is our
 sample means plus or minus two of these standard errors.
