--- a/visualising_data.qmd
+++ b/visualising_data.qmd
@@ -22,8 +22,7 @@ set_theme(theme_cowplot() +theme(legend.position = "none"))
 library(openintro)
 data(COL)
 fill_colour1<-COL['blue','f3']
-fill_colour1 <- "#a6bddb"
-fill_colour1 <- "#fed98e"
+fill_colour1 <- "#bdd7e7"
 fill_colour2<-COL['red','f6']
 fill_colour3<-COL['blue','f1']
 line_colour<-COL['blue','full']
@@ -86,7 +85,7 @@ $\text{SE}=\frac{\text{SD}}{\sqrt{n}}$ where *n* is the sample size. This means 
 If you include error bars in a plot you can use any of these three errors, depending on the story you want to tell. Whichever, just **must** state in the figure caption which of them you have used. Failing to do this can seriously mislead the reader, since they can be of very different magnitudes.
 :::
 
-The errors calculated here are **standard errors of the mean**. We do this becuase we want to get an idea, from our samples, of how plausible it is that the population means differ from each other. These population means could plausibly lie anyhwere in the range that is our sample means plus or minus two of these standard errors.
+The errors calculated here are **standard errors of the mean**. We use these because we want to get an idea, from our samples, of how plausible it is that the population means differ from each other. These population means could plausibly lie anyhwere in the range that is our sample means plus or minus two of these standard errors.
 
 -   Does it look as though there is evidence form the data for a difference between Adelie and Chinstrop penguins?
 -   What about the Gentoos compared to either of the other two?
