--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, toptitle=1mm, coltitle=black, bottomtitle=1mm, opacitybacktitle=0.6, opacityback=0, colback=white, bottomrule=.15mm, left=2mm, leftrule=.75mm, toprule=.15mm, breakable, colframe=quarto-callout-note-color-frame, arc=.35mm, titlerule=0mm, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, left=2mm, coltitle=black, breakable, opacitybacktitle=0.6, colback=white, colframe=quarto-callout-note-color-frame, leftrule=.75mm, toprule=.15mm, toptitle=1mm, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colbacktitle=quarto-callout-note-color!10!white, titlerule=0mm, arc=.35mm, bottomtitle=1mm]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -344,7 +344,7 @@ of very different magnitudes.
 The errors calculated here are \textbf{standard errors of the mean}. We
 use these because we want to get an idea, from our samples, of how
 plausible it is that the population means differ from each other. These
-population means could plausibly lie anyhwere in the range that is our
+population means could plausibly lie anywhere in the range that is our
 sample means plus or minus two of these standard errors.
 
 \begin{itemize}
@@ -364,6 +364,8 @@ After summarising the data, then ext thing we nearly always do in
 deciding what the data is telling us is to plot the data. We have
 several choices of how to do so and each has its pros and cons. Let's
 run through a few of them.
+
+\subsection{Bar charts}\label{bar-charts}
 
 \begin{figure}
 
@@ -418,6 +420,12 @@ run through a few of them.
 \caption{\label{fig-bar-charts}Bar charts, from worst to best}
 
 \end{figure}%
+
+\section{Histograms}\label{histograms}
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-10-1.pdf}}
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-11-1.pdf}}
 
 \bookmarksetup{startatroot}
 
