--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, left=2mm, coltitle=black, breakable, opacitybacktitle=0.6, colback=white, colframe=quarto-callout-note-color-frame, leftrule=.75mm, toprule=.15mm, toptitle=1mm, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colbacktitle=quarto-callout-note-color!10!white, titlerule=0mm, arc=.35mm, bottomtitle=1mm]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, colbacktitle=quarto-callout-note-color!10!white, left=2mm, toptitle=1mm, bottomrule=.15mm, titlerule=0mm, rightrule=.15mm, breakable, colback=white, colframe=quarto-callout-note-color-frame, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, arc=.35mm, toprule=.15mm, opacitybacktitle=0.6, coltitle=black, opacityback=0]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -423,9 +423,48 @@ run through a few of them.
 
 \section{Histograms}\label{histograms}
 
-\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-10-1.pdf}}
+Histograms can also be used to inspect a data set, even one with
+multiple categories, as with the penguin data. Unlike bar charts they
+show the distribution of a dataset, including its centtal value, spread
+and symmetry, or lack thereof.
 
-\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-11-1.pdf}}
+\begin{figure}
+
+\centering{
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/fig-histograms-1.pdf}}
+
+}
+
+\subcaption{\label{fig-histograms-1}bins too narrow}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/fig-histograms-2.pdf}}
+
+}
+
+\subcaption{\label{fig-histograms-2}Bin width about right}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/fig-histograms-3.pdf}}
+
+}
+
+\subcaption{\label{fig-histograms-3}Bins too wide}
+
+}
+
+\caption{\label{fig-histograms}Histograms of different bin width}
+
+\end{figure}%
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-13-1.pdf}}
+
+\pandocbounded{\includegraphics[keepaspectratio]{visualising_data_files/figure-pdf/unnamed-chunk-14-1.pdf}}
 
 \bookmarksetup{startatroot}
 
