--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-note-color-frame, toprule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, left=2mm, breakable, bottomtitle=1mm, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, opacitybacktitle=0.6, coltitle=black, toptitle=1mm, leftrule=.75mm, bottomrule=.15mm, titlerule=0mm, rightrule=.15mm, colback=white, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, breakable, toptitle=1mm, opacityback=0, rightrule=.15mm, arc=.35mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colback=white, left=2mm, bottomtitle=1mm, leftrule=.75mm, titlerule=0mm, colframe=quarto-callout-note-color-frame, colbacktitle=quarto-callout-note-color!10!white, bottomrule=.15mm, coltitle=black, opacitybacktitle=0.6]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -423,10 +423,23 @@ run through a few of them.
 
 \section{Histograms}\label{histograms}
 
-Histograms can also be used to inspect a data set, even one with
-multiple categories, as with the penguin data. Unlike bar charts they
-show the distribution of a dataset, including its centtal value, spread
-and symmetry, or lack thereof.
+In histograms the range of a variable is split into bis of. certain
+width, then the number of observations that fall within each bin is
+displayed.
+
+They can be used to inspect a data set, even one with multiple
+categories, as with the penguin data. Unlike bar charts they do show the
+distribution of the dataset, including its centtal value, spread and
+symmetry, or lack thereof.
+
+They do need care however in choice of the width of the bins. Make thm
+too narrow and they can look gappy, with too much scatter ntrocued by
+there not being many observations in each bin. Make the bins too wide
+and much of the detail of the distribution is lost. You need to find,
+approximately, the `Goldilocks' width, one that is just right.
+Sometimes, though, you choose a binwidth that has meaning to you and the
+reader, such as widths of 1 m/s if you were doing a histogram of a set
+of wind speed measurements.
 
 \begin{figure}
 
