get histogram colours right

--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, breakable, toptitle=1mm, opacityback=0, rightrule=.15mm, arc=.35mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, colback=white, left=2mm, bottomtitle=1mm, leftrule=.75mm, titlerule=0mm, colframe=quarto-callout-note-color-frame, colbacktitle=quarto-callout-note-color!10!white, bottomrule=.15mm, coltitle=black, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, left=2mm, opacityback=0, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, rightrule=.15mm, colback=white, arc=.35mm, coltitle=black, leftrule=.75mm, breakable, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, opacitybacktitle=0.6]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
@@ -429,17 +429,17 @@ displayed.
 
 They can be used to inspect a data set, even one with multiple
 categories, as with the penguin data. Unlike bar charts they do show the
-distribution of the dataset, including its centtal value, spread and
+distribution of the dataset, including its central value, spread and
 symmetry, or lack thereof.
 
-They do need care however in choice of the width of the bins. Make thm
-too narrow and they can look gappy, with too much scatter ntrocued by
-there not being many observations in each bin. Make the bins too wide
-and much of the detail of the distribution is lost. You need to find,
-approximately, the `Goldilocks' width, one that is just right.
-Sometimes, though, you choose a binwidth that has meaning to you and the
-reader, such as widths of 1 m/s if you were doing a histogram of a set
-of wind speed measurements.
+They do need care however in choice of the width of the bins. Make these
+too narrow and the histograms can look gappy, with too much scatter
+introduced by there not being many observations in each bin. Make the
+bins too wide and much of the detail of the distribution is lost. You
+need to find, approximately, the `Goldilocks' width, one that is just
+right. Sometimes, though, you choose a binwidth that has meaning to you
+and the reader, such as widths of 1 m/s if you were doing a histogram of
+a set of wind speed measurements.
 
 \begin{figure}
 
