--- a/index.tex
+++ b/index.tex
@@ -306,7 +306,7 @@ Adelie & 73 & 3368.84 & 31.53\\
 \hline
 \end{tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, left=2mm, opacityback=0, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, rightrule=.15mm, colback=white, arc=.35mm, coltitle=black, leftrule=.75mm, breakable, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, left=2mm, colframe=quarto-callout-note-color-frame, opacitybacktitle=0.6, coltitle=black, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, colback=white, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, titlerule=0mm, opacityback=0, breakable, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Types of error bar}, toptitle=1mm]
 
 \textbf{standard deviations}: These tell us about the spread of values
 in a sample or a population. They do not systematically get bigger or
